syntax = "proto3";

option csharp_namespace = "MyServer";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc AccumulateCount (stream CounterRequest) returns (CounterReply);

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message CounterRequest {
  int32 count = 1;
}

// The response message containing the current count
message CounterReply {
  int32 count = 1;
}
